changed guitarItem div className from product-container to guitar-container which inherently fixed css grid alignment.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   color: white;
-  position:inherit
+  /* position:inherit */
 }
 
 .container {
@@ -22,7 +22,7 @@ a {
 
 
 /* Navbar Styles */
-nav {
+nav a {
   display: flex;
   justify-content: space-between;
   position: relative;
@@ -137,63 +137,47 @@ nav .cart-content {
 
 
 
-
-/*@media all and (max-width: 768px) {
-  nav {
-    width: 100%
-  }
-
-  .carousel {
-    width: 100%;
-  }
-
-  #goLeft {
-    transform: translateY(-80%);
-    height: 30vh
-  }
-
-  #goRight {
-    transform: translateY(-80%);
-    height: 30vh
-  }
-
-}
-
-@media all and (max-width: 1080px) {
-  nav {
-    width: 100%
-  }
-
-  .carousel {
-    width: 100%
-  }
-
-} */
-
 /* Card Styles */
 
 main {
   display: grid;
-  height: 345px;
+  height: 367x;
   width: 300px;
+  justify-content: center;
 }
+
+
 .product-container {
   display: grid;
+  max-width: 50%;
   grid-template-columns: 33.3% 33.3% 33.3%;
-  margin: 0  auto;
-  max-width: 70%;
-  padding: 20px;
-  position: relative;
+  grid-auto-flow: row;
+  justify-content: center;
+  align-content: center;
+  margin: 0 auto;
+  align-content: center;
+  grid-gap: 50px;
+  margin-top: 50px;
+  
 }
 
 
+/* .container-cards {
+  max-width: 100%;
+  height: 400px;
+} */
 
+/* .container {
+  width: 100%
+} */
 
  
 .card-container {
   background-color: #39393b;
   cursor: pointer;
   transition: all 0.3s ease 0s;  
+  width: 100%;
+  height: auto;
   
 }
 
@@ -201,12 +185,12 @@ main {
   overflow: hidden; 
   position: relative;
   height: 200px;
-  width: 300px;
+  width: 100%;
 }
 
 .image-container img{
   width: 100%;
-  position:relative;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -240,7 +224,7 @@ main {
 
 .card-content {
   margin: 1rem;
-  margin-top: 1rem;
+  /* margin-top: 1rem; */
   background-color: #39393b;
 }
 
